crates/sql-orm/tests/ui/insertable_missing_entity.rs
use sql_orm::prelude::*;

#[derive(Insertable, Debug, Clone)]
struct NewCustomer {
    email: String,
}

fn main() {}
